--- a/src/package.json
+++ b/src/package.json
@@ -1,21 +1,22 @@
 {
-    "family": "test",
-    "version": "0.0.1",
-    "name": "gruntTest",
-    "spm": {
-        "alias": {
-            "jquery":"lib/jquery/jquery/1.8.2/jquery",
-            "dialog": "common/dialog/dialog"
-        }
-    },
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-cmd-transport":"~0.2.0",
-        "grunt-contrib-concat":"~0.5.1",
-        "grunt-contrib-copy":"~0.8.1",
-        "grunt-contrib-clean":"~0.4.0",
-        "grunt-contrib-uglify":"~0.2.0",
-        "grunt-contrib-cssmin": "~0.5.0",
-        "grunt-processhtml": "~0.5.0"
+  "family": "test",
+  "version": "0.0.1",
+  "name": "gruntTest",
+  "spm": {
+    "alias": {
+      "jquery": "lib/jquery/jquery/1.8.2/jquery",
+      "dialog": "common/dialog/dialog"
     }
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-cmd-transport": "~0.2.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.1",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-cssmin": "~0.5.0",
+    "grunt-processhtml": "~0.5.0",
+    "grunt-process-tags": "~1.0.0"
+  }
 }
