--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-cssmin": "~0.5.0",
     "grunt-processhtml": "~0.5.0",
-    "grunt-process-tags": "~1.0.0"
+    "grunt-process-tags": "~1.0.0",
+    "grunt-processhtml-prepend": "~0.3.5"
   }
 }
